# scene-dev-playground

./: README.md  scene-dev-playground.cabal  stack.yaml
resources/: colorFragment.glsl  colorVertex.glsl  fragment.glsl  textureFragment.glsl  textureVertex.glsl
src/: Main.hs
