name:                scene-dev-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/scene-dev-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scene-dev-playground
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async
                     , gl
                     , linear
                     , scene
                     , vector
  ghc-options:         -Wall -threaded
